fått utt all info till den publicerade sidan med javascript

--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,24 @@
 </head>
 <body>
     <header>
+        <img src="images/logo.png" alt="logotyp">
 
     </header>
     <main>
-        <h1>Webbutveckling kursplan</h1>
-        <ul id="kurser">
+        <h1>Webbutveckling - Ramschema</h1>
 
-        </ul>
+
+        <label for="sok">Sök:</label><br>
+        <input id="sok" type="text" placeholder="Sök efter kursnamn eller kurskod">
+
+        <h2>Kurskod</h2>
+        <ul id="kurser"></ul>
+
+        <h2>Namn</h2>
+        <ul id="namn"></ul>
+
+        <h2>Progression</h2>
+        <ul id="progression"></ul>
     </main>
     
 </body>
